# DielectricFit

./: .gitignore  Makefile  SESSION_NOTES.md  gemini_workflow.md  pyproject.toml  pytest.ini  requirements-test.txt  template.html  test_delete.py
config/: settings.py  urls.py
dev/: dielectric_model_fitting_guide_v3.md  django_permissions_integration.md  git_like_versioning_system.md  github_collaboration_system.md  implementation_checklist.md  kramers-kronig-guide.md  relational_model_proposal.md  relational_model_proposal_v2.md  user_story.md  user_story_v2.md  workflow.md  workflow_v2.md
dielectric/: admin.py  apps.py  models.py  urls.py  views.py
dielectric/migrations/: 0001_initial.py  0002_analysis_artifact_fittedcurve_fittingsession_and_more.py  0003_add_project_structure.py  0004_migrate_datasets_to_projects.py  0005_add_user_project_preference.py
people/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
people/migrations/: 0001_initial.py  0002_alter_projectactivity_options.py  0003_github_style_invitations.py  0004_add_avatar_to_userprofile.py
people/templates/people/: profile.html
static/dielectric/css/: app.css  dashboard.css  profile.css
static/dielectric/js/: analysis.js  app.js  dashboard.js
templates/: base.html  base_auth.html
templates/components/: select_dropdown.html  timezone_dropdown.html
templates/dielectric/: analysis.html  dashboard.html  dashboard_clean.html  models.html  preferences.html  profile.html  reports.html
templates/registration/: logged_out.html  login.html  register.html
(+5 files in other folders)
