[project]
name = "dielectricfit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Django>=5.2,<6.0",
  "lmfit>=1.3.4",
  "matplotlib>=3.10.5",
  "numba>=0.61.2",
  "pytest>=8.4.1",
  "scipy>=1.16.1",
  "statsmodels>=0.14.5",
  "tzdata>=2024.1",
]

